--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -173,10 +173,10 @@
 	}
 	.news-in-list {
 		border: 1px solid #ddd;
-		background-color: #ffd;
+		background-color: white;
 		padding: 5px;
 	}
-	.news-block {
+	/*.news-block {
 		padding: 5px;
 		text-align: center;
 		float:left;
@@ -190,5 +190,5 @@
 	}
 	.button-block {
 		display: inline-block
-	}
+	}*/
 </style>
