--- a/views/base.ejs
+++ b/views/base.ejs
@@ -4,11 +4,6 @@
 	<title><%- blocks.title %></title>
 
 	<meta charset="UTF-8">
-	<meta http-equiv="cache-control" content="max-age=0" />
-	<meta http-equiv="cache-control" content="no-cache" />
-	<meta http-equiv="expires" content="0" />
-	<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-	<meta http-equiv="pragma" content="no-cache" />
 	
 	<script src="/libs/angular/angular.min.js"></script>
 	<script src="/libs/angular-route/angular-route.min.js"></script>
@@ -21,23 +16,8 @@
 
 	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.css"></link>
 
-	<meta property="og:title" content="Заголовок" />
-    <meta property="og:description" content="Описание" />
-    <meta property="og:url" content="Ссылка на страницу" />
-    <meta property="og:image" content="Ссылка на картинку" />
-    <meta property="og:type" content="article" /> 
-
-    <meta name="title" content="Article title" />
-	<meta name="description" content="Article description.This is a very interesting article." />
-	<link rel="image_src" href="http://mysite.com/mypic.jpg" />
-
-	<meta name="twitter:card" content="summary_large_image"> 
-	<meta name="twitter:site" content="@publisher_handle"> 
-	<meta name="twitter:title" content="Page Title"> 
-	<meta name="twitter:description" content="Page description less than 200 characters"> 
-	<meta name="twitter:creator" content="@author_handle"> 
-	<!-- Twitter summary card with large image must be at least 280x150px --> 
-	<meta name="twitter:image:src" content=" http://www.example.com/image.html">
+    <meta name="title" content="Научно-познавательное издание с уклоном" />
+	<meta name="description" content="Космос, новости, физика, редактор" />
 
 </head>
 <body>
