--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -82,7 +82,9 @@ a {
 	color: #4D42FF !important;
 }
 .img_description {
-	font-size: 13px;
+	font-size: 14px;
+	line-height: 18px;
+	margin-bottom: 15px;
 }
 #vk_groups {
 	width: 100%;
