--- a/views/base.ejs
+++ b/views/base.ejs
@@ -16,8 +16,8 @@
 
 	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.css"></link>
 
-    <meta name="title" content="Научно-познавательное издание с уклоном" />
-	<meta name="description" content="Космос, новости, физика, редактор" />
+    <!-- <meta name="title" content="Научно-познавательное издание с уклоном" /> -->
+	<!-- <meta name="description" content="Космос, новости, физика, редактор" /> -->
 
 </head>
 <body>
