--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,11 @@
 	<div class="feed">
 		<div ng-repeat="block in feed_blocks"
 			 class="block">
-			<news ng-repeat="element in block.feed_elements" ng-model="element"></news>
+			<news ng-if="element._size" 
+			 	  ng-click="location.href = '/post/{{ element._id }}'"
+	 			  ng-class="{ s11 : element._size == 1, s21 : element._size == 2 , s22 : element._size == 4}"  
+				  ng-repeat="element in block.feed_elements" 
+				  ng-model="element"></news>
 		</div>
 	</div>
 </div>
