--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -6,21 +6,21 @@
 		float: left;
 		height: 400px;
 	}
-	div.s11, div.s21,div.s22 {
+	news.s11, news.s21,news.s22 {
 		padding: 10px;
 		float: left;
 		position: relative;
 	}
-	div.s11, div.s21 {
+	news.s11, news.s21 {
 		height: 200px;
 	}
-	div.s11 {
+	news.s11 {
 		width: 50%;
 	}
-	div.s21 {
+	news.s21 {
 		width: 100%;
 	}
-	div.s22 {
+	news.s22 {
 		width: 100%;
 		height: 400px;
 }
@@ -73,28 +73,28 @@
 		-moz-transition: all .3s .2s; /*transition-delay on mouseenter*/
 		transition: all .3s .2s; /*transition-delay on mouseenter*/
 	}
-	div.s11 .inner_container .description p {
+	news.s11 .inner_container .description p {
 		max-height: 60px;
 	}
-	div.s11 .inner_container .description p, 
-	div.s22 .inner_container .description p {
+	news.s11 .inner_container .description p, 
+	news.s22 .inner_container .description p {
 		position: absolute;
 		left: 0;
 		right: 0;
 		bottom:0;
 		background-color: white;
 	}
-	div.s21 .inner_container .description {
+	news.s21 .inner_container .description {
 		height: 100%;
 		width: 48%;
 		display: table;
 		background-color: white;
 	}
-	div.s21 .inner_container .description p {
+	news.s21 .inner_container .description p {
 		display: table-cell;
 		vertical-align: middle;
 	}
-	div.s22 .inner_container .description p {
+	news.s22 .inner_container .description p {
 		max-height: 190px;
 	}
 
@@ -109,31 +109,48 @@
 		text-align: center;
 		vertical-align: middle;
 		padding: 20px;
-		font-size: 26px;
 		font-weight: 700;
 		text-shadow: 0px 1px 1px rgba(0,0,0,.5);
 		color: #21C7C2;
 	}
-	div[class*=s] .inner_container:hover .img .news_title {
+	news.s11 div.news_title p {
+		font-size: 18px;
+	}
+	news.s11 div.description p {
+		font-size: 12px;
+	}
+	news.s21 div.news_title p {
+		font-size: 22px;
+	}
+	news.s21 div.description p {
+		font-size: 14px;
+	}
+	news.s22 div.news_title p {
+		font-size: 26px;
+	}
+	news.s22 div.description p {
+		font-size: 18px;
+	}
+	news[class*=s] .inner_container:hover .img .news_title {
 		-webkit-transition: all .3s 0s;
 		-moz-transition: all .3s 0s;
 		transition: all .3s 0s;
 	}
-	div[class*=s] .inner_container .img .news_title {
+	news[class*=s] .inner_container .img .news_title {
 		-webkit-transition: all .3s .2s;
 		-moz-transition: all .3s .2s;
 		transition: all .3s .2s;
 	}
-	div.s11 .inner_container:hover .img .news_title {
+	news.s11 .inner_container:hover .img .news_title {
 		-webkit-transform: translateY(-45px);
 		-moz-transform: translateY(-45px);
 	    transform: translateY(-45px);
 	}
-	div.s21 .inner_container:hover .img .news_title {
+	news.s21 .inner_container:hover .img .news_title {
 		padding-left: 290px;
 		padding-right: 20px;	
 	}
-	div.s22 .inner_container:hover .img .news_title {
+	news.s22 .inner_container:hover .img .news_title {
 		-webkit-transform: translateY(-100px);
 		-moz-transform: translateY(-100px);
 	    transform: translateY(-100px);
