--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,16 +1,25 @@
+<link rel="stylesheet" href="/libs/animate.css/animate.min.css">
 <link href='http://fonts.googleapis.com/css?family=Philosopher:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Comfortaa:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <script>
 	$(document).ready(function() {
-		colors = ['#2F5A99','#2A8C66','#B94788','#CE5251','#21C7C2'];
-		random_color = colors[~~(Math.random() * colors.length)]
-		$('.logo').css('color', random_color);
-		$('.bottom').css('background-color', random_color);
+		colors = ['#2F5A99','#2A8C66','#B94788','#CE5251'];
+		random_color = colors[~~(Math.random() * colors.length)];
+		$('.image').css('background-color', random_color);
+		// $('.bottom').css('background-color', random_color);
 		$('body > .container').css('border-top', '4px solid ' + random_color)
 	})
 </script>
-<div class="logo">ИСКРА
-	<div class="left-tabs">
+<div class="top">
+	<div class="animated  flipInX image">
+		<div class="animated bounceInDown tk_star"></div>
+		<div class="animated bounceInDown tk_text"></div>
+	</div>
+</div>
+<!-- <div class="logo">космос -->
+	<!-- <div class="left-tabs">
 		<div class="each-tab">
 			<span>Фишка
 				<div class='bottom'></div>
@@ -28,14 +37,50 @@
 				<div class='bottom'></div>
 			</span>
 		</div>
-		<div class="each-tab">
+		div class="each-tab">
 			<span>О проекте
 				<div class='bottom'></div>
 			</span>
 		</div>
-	</div>
-</div>
+	</div> -->
+<!-- </div> -->
 <style>
+	.top {
+		height: 60px;
+		width: 100%;
+		margin: 25px 0;
+	}
+	.image {
+		height: 60px;
+		width: 60px;
+		position: relative;
+		margin: 0 auto;
+		overflow: hidden;
+		/*background-image: url(/images/tk_tra.png);*/
+		/*background-size: cover;*/
+		box-shadow: 0 2px 4px rgba(0,0,0,.5);
+	}
+	.image div[class*=tk_] {
+		background-size: cover;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+	.image .tk_text {
+		background-image: url(/images/tk_tk.png);
+		-webkit-animation-delay: .2s;
+		-moz-animation-delay: .2s;
+		animation-delay: .2s;
+		
+	}
+	.image .tk_star {
+		background-image: url(/images/tk_star.png);
+		-webkit-animation-delay: .4s;
+		-moz-animation-delay: .4s;
+		animation-delay: .4s;
+	}
 	.logo {
 		width: 550px;
 		height: 110px;
@@ -43,7 +88,8 @@
 		line-height: 110px;
 		text-align: center;
 		position: relative;
-		font-family: "Philosopher";
+		/*font-family: "Philosopher";*/
+		font-family: 'Comfortaa';
 		font-weight: 700;
 		margin: 20px auto;
 	}
