добавлена ссылка на корень при клике на иконку

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,10 +10,12 @@
 	})
 </script>
 <div class="top">
-	<div class="animated  flipInX image">
-		<div class="animated bounceInDown tk_star"></div>
-		<div class="animated bounceInDown tk_text"></div>
-	</div>
+	<a href="/">
+		<div class="animated flipInX image">
+			<div class="animated bounceInDown tk_star"></div>
+			<div class="animated bounceInDown tk_text"></div>
+		</div>
+	</a>
 </div>
 <!-- <div class="logo">космос -->
 	<!-- <div class="left-tabs">
@@ -46,6 +48,12 @@
 		height: 60px;
 		width: 100%;
 		margin: 25px 0;
+		text-align: center;
+	}
+	.top a {
+		width: 60px;
+		height: 60px;
+		display: inline-block;
 	}
 	.image {
 		height: 60px;
