--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,14 +9,14 @@
 		$('body > .container').css('border-top', '4px solid ' + random_color)
 	})
 </script>
-<div class="top">
+<nav class="top">
 	<a href="/">
 		<div class="animated flipInX image">
 			<div class="animated bounceInDown tk_star"></div>
 			<div class="animated bounceInDown tk_text"></div>
 		</div>
 	</a>
-</div>
+</nav>
 <!-- <div class="logo">космос -->
 	<!-- <div class="left-tabs">
 		<div class="each-tab">
