--- a/public/javascripts/templates/news_element.html
+++ b/public/javascripts/templates/news_element.html
@@ -1,11 +1,11 @@
- <a href="/post/{{ news._id }}">
-	<div class="inner_container">
-		<div ng-transclude></div>
-	 	<div class="img" style="background-image: url( {{ news.image }} )">
-	 		<div class='news_title'>
-		 		<p>{{ news.title }}</p>
-	 		</div>
-	 	</div>
+ <a class="inner-container" href="/post/{{ news._id }}" target="_blank">
+	<!-- <div ng-transclude></div> -->
+ 	<div class="picture" 
+ 		 style="background-image: url( {{ news.image }} )"></div>
+	<div class="text-container">
+ 		<div class='news_title'>
+	 		<p>{{ news.title }}</p>
+ 		</div>
 	 	<div class="description">
 	 		<p>{{ news.description }}</p>
 	 	</div>
