--- a/views/base.ejs
+++ b/views/base.ejs
@@ -15,6 +15,7 @@
 	</script>
 
 	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.css"></link>
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
     <!-- <meta name="title" content="Научно-познавательное издание с уклоном" /> -->
 	<!-- <meta name="description" content="Космос, новости, физика, редактор" /> -->
