--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="/libs/fontawesome/css/font-awesome.min.css">
 
 <div class="admin-page" ng-app="admin" ng-controller="Admin">
-
+	<div class="promises" ng-if="successful_save" ng-class="{ success : successful_save }"><p>Новость успешно сохранена</p></div>
 	<div class="button_panel">
 		<button ng-click="page='create_page'; news = {};">create</button>
 		<button ng-click="page='feed_page'">feed</button>
@@ -27,9 +27,6 @@
 			<p class="labels">Image</p>
 			<input type="text" 
 				   ng-model="news.image">
-			<p class="labels">Tags</p>
-			<input type="text" 
-				   ng-model="news.tags">
 			<p class="labels">Content</p>
 			<textarea ui-tinymce="tinymce_options"
 				   	  ng-model="news.content"></textarea>
@@ -101,10 +98,22 @@
 	.input {
 		width: 50%;
 		border-top: gold;
+		-webkit-transition: all 1s;
+		-moz-transition: all 1s;
+		transition: all 1s;
+	}
+	.success {
+		background-color: lightgreen;
 	}
 	.output {
 		width: 50%;
 		border-top: cyan;
+	}
+	.promises {
+		width: 100%;
+		height: 40px;
+		line-height: 40px;
+		text-align: center;
 	}
 	.button-bottom-panel {
 		padding: 40px 0;
