--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -128,6 +128,9 @@
 		font-size: 15px;
 	}
 	.input textarea {
+		line-height: 20px;
+	}
+	.input textarea {
 		height: 100px;
 	}
 	button.size-change {
