--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -20,11 +20,11 @@
 	}
 	news.s11 {
 		width: 50%;
-		height: 360px;
+		height: 405px;
 	}
 	news.s21 {
 		width: 100%;
-		height: 240px;
+		height: 195px;
 	}
 	news.s22 {
 		width: 100%;
@@ -53,7 +53,7 @@
 	}
 
 	news.s11 .inner-container .picture {
-		height: 55%;
+		height: 50%;
 		width: 100%;
 		border-radius: 3px 3px 0 0;
 	}
@@ -70,9 +70,9 @@
 		border-radius: 3px 3px 0 0;
 	}
 	news.s11 .inner-container .text-container {
-		height: 45%;
+		height: 50%;
 		width: 100%;
-		padding: 5px 10px;
+		padding: 2px 10px;
 	}
 	news.s21 .inner-container .text-container {
 		padding: 5px 10px 5px 0;
@@ -86,21 +86,21 @@
 		padding: 10px 20px;
 	}
 	news.s11 .inner-container .text-container .news_title {
-		margin: 4px 0;
-		font-size: 20px;
-		line-height: 24px;
+		margin: 0 0 2px 0;
+		font-size: 18px;
+		line-height: 20px;
 		font-weight: 700;
 	}
 	news.s21 .inner-container .text-container .news_title {
-		font-size: 22px;
-		line-height: 26px;
+		font-size: 17px;
+		line-height: 19px;
 		font-weight: 700;
-		margin: 5px 0;
+		margin: 0 0 5px 0;
 	}
 	news.s22 .inner-container .text-container .news_title {
-		margin: 10px 0;
-		font-size: 30px;
-		line-height: 35px;
+		margin: 0 0 5px 0;
+		font-size: 28px;
+		line-height: 30px;
 		font-weight: 700;
 	}
 	news.s11 .inner-container .text-container .description {
@@ -108,8 +108,8 @@
 		line-height: 18px;
 	}
 	news.s21 .inner-container .text-container .description {
-		font-size: 16px;
-		line-height: 20px;
+		font-size: 13px;
+		line-height: 17px;
 	}
 	news.s22 .inner-container .text-container .description {
 		font-size: 17px;
