--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -14,9 +14,9 @@
 		<button ng-click="page='feed_page'">feed</button>
 		<button ng-click="page='list_page'">list</button>
 	</div>
-	{{ page }}
 
 	<div ng-show="page=='create_page'">
+		<h1>СОЗДАНИЕ/РЕДАКТИРОВАНИЕ НОВОСТИ</h1>
 			
 		<div class="input">
 			<p class="labels">Title</p>
@@ -46,6 +46,7 @@
 		</div>
 	</div>
 	<div ng-if="page=='feed_page'" ng-init="loadForPage(true)">
+		<h1>НОВОСТНОЙ ФИД</h1>
 		
 		<div class="feed">
 			<div ng-repeat="block in feed_blocks"
@@ -71,22 +72,20 @@
 	</div>
 
 	<div ng-if="page=='list_page'" ng-init="loadForPage()"> 
+		<h1>СПИСОК ВСЕХ НОВОСТЕЙ</h1>
 		<div ng-repeat="news in feeds" class="news-in-list">
 			
-			<div class = "news-block news-main">
-				<p>{{ news.title }}</p>
-				<p>size : {{ news.size }}</p>
-			</div>
-			
-			<div class = "news-block news-description">
-				<p>{{ news.description }}</p>
-			</div>
+			<div class="image-info" style="background-image: url({{ news.image }})"></div>
+			<span class="info">
+					<p>{{ news.title }}</p>
+					<p>{{ news.description }}</p>
 
-			<div class = "button-block">
-				<button ng-click="deleteNews(news._id)">Удалить</button>
-				<button ng-click="loadToFormForUpdate(news)">Редактировать</button>
-				<button><a href="/post/{{ news._id }}">Перейти в новость</a></button>
-			</div>
+				<span class = "button-block">
+					<button ng-click="deleteNews(news._id)">Удалить</button>
+					<button ng-click="loadToFormForUpdate(news)">Редактировать</button>
+					<button><a href="/post/{{ news._id }}">Перейти в новость</a></button>
+				</span>
+			</span>
 		</div>
 	</div>
 </div>
@@ -142,45 +141,22 @@
 	button.highlighted {
 		background-color: #2980b9;
 	}
-	/*// basic blocks additional styles for update and delete*/
-	.admin-elements {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		z-index: 9999;
-	}
-	.row1, .row2 {
-		height: 50%;
-		width: 100%;
-		text-align: center;
-	}
-	.delete {
-		color: #e74c3c;
-	}
-	.update {
-		color: #2980b9;
-	}
-	.s11 div[class*=row], .s21 div[class*=row] {
-		line-height: 100px;
-	}
-	.s22 div[class*=row] {
-		line-height: 200px;
-	}
-	div[class*=row] span {
-		background-color: rgba(255,255,255,.8);
-		font-weight: 700;
-	}
-	.s11 div[class*=row] span, .s21 div[class*=row] span {
-		font-size: 18px;
-		padding: 3px 10px;
-	} 
-	.s22 div[class*=row] span {
-		font-size: 25px;
-		padding: 10px 20px;
-	}
 	.news-in-list {
-		border: 1px solid #ddd;
-		background-color: white;
-		padding: 5px;
+		clear: both;
+		background-color: #ddd;
+		border: 1px solid #bbb;
+		width: 100%;
+		overflow: hidden;
+		margin-bottom: 10px;
+	}
+	.image-info, .info {
+		float: left;
+		width: 800px;
+	}
+	.image-info {
+		background-size: cover;
+		background-position: center center;
+		height: 50px;
+		width: 50px;
 	}
 </style>
