бутстрап min.css

--- a/views/base.ejs
+++ b/views/base.ejs
@@ -7,7 +7,7 @@
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
 	<%- scripts%>
 
-	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.css"></link>
+	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.min.css"></link>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<%- stylesheets %>
 
