--- a/views/base.ejs
+++ b/views/base.ejs
@@ -3,6 +3,8 @@
 <head>
 	<title><%- blocks.title %></title>
 	<meta charset="UTF-8">
+
+	<script>console.a=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:01px1pxrgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script>
 	<script src="/libs/angular/angular.min.js"></script>
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
 	<%- scripts%>
