добавлены фавиконка в браузере

--- a/views/base.ejs
+++ b/views/base.ejs
@@ -11,6 +11,8 @@
 
 	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.min.css"></link>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+	<link rel="icon" type="image/png" href="/images/tk.png" sizes="32x32">
+
 	<%- stylesheets %>
 
 </head>
