добавлена смена титла

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- layout('base.ejs') %>
-<% block('title', 'Главная страница') -%>
+<% block('title', 'Твой Космос') -%>
 <% script("/javascripts/utils.js") -%>
 <% script("/javascripts/index_page.js") -%>
 <% script("/javascripts/directives/news_element.js") -%>
