--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 			 class="block">
 			<news ng-if="element._size" 
 				  ng-repeat="element in block.feed_elements"
-	 			  ng-class="{ s11 : element._size == 1, s21 : element._size == 2 , s22 : element._size == 4}"  
+	 			  ng-class="{ s11 : element._size == 1, s21 : element._size == 2 , s22 : element._size == 4}"type="news_type"  
 				  ng-model="element"></news>
 		</div>
 	</div>
