--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,7 @@
 <% script("/javascripts/index_page.js") -%>
 <% script("/javascripts/directives/news_element.js") -%>
 <% stylesheet("/stylesheets/index.css") -%>
-<div ng-app="index" ng-controller="Index" ng-init="init()">	
-
+<div ng-app="tvoyKosmos" ng-controller="Index" ng-init="init()">	
 	<div class="feed">
 		<div ng-repeat="block in feed_blocks"
 			 class="block">
