--- a/views/base.ejs
+++ b/views/base.ejs
@@ -3,20 +3,25 @@
 <head>
 	<title><%- blocks.title %></title>
 	<meta charset="UTF-8"> 
-
-	<!-- <script>console.a=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:01px1pxrgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script>-->
 	<script src="/libs/angular/angular.min.js"></script>
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
+	<script src="/libs/angular-ui-tinymce/src/tinymce.js"></script>
+	<script src="/libs/angular-local-storage/angular-local-storage.min.js"></script>
+
+
+	<!-- <script>console.a=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:01px1pxrgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script> -->
+	<script>
+		tk = angular.module('tvoyKosmos',['ui.tinymce', 'LocalStorageModule']);
+	</script> 
 	<%- scripts%>
 
 	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.min.css"></link>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="image/png" href="/images/tk.png" sizes="32x32">
-
 	<%- stylesheets %>
 
 </head>
-<body>
+<body ng-app="tvoyKosmos">
 	<div class="container">	
 		
 	<%- partial('header') %>	
