Изменен формат постилок и тд

--- a/public/javascripts/templates/news_element.html
+++ b/public/javascripts/templates/news_element.html
@@ -1,4 +1,4 @@
- <a class="inner-container" href="/post/{{ news._id }}" target="_blank">
+ <a class="inner-container" href="/post/{{ news._id }}">
  	<div ng-if="type=='normal'"
  		 class="picture" 
  		 style="background-image: url( {{ news.image }} )"></div>
