каждая новость в админке сперва грузится

--- a/views/base.ejs
+++ b/views/base.ejs
@@ -5,8 +5,9 @@
 	<meta charset="UTF-8"> 
 	<script src="/libs/angular/angular.min.js"></script>
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
+	<!-- // <script src="/libs/tinymce/tinymce.min.js"></script> -->
 	<script src="/libs/angular-local-storage/angular-local-storage.min.js"></script>
-	
+	<script>console.a=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:01px1pxrgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script>
 	<script>
 		tk = angular.module('tvoyKosmos',['ui.tinymce', 'LocalStorageModule']);
 	</script> 
