--- a/views/content.ejs
+++ b/views/content.ejs
@@ -36,7 +36,7 @@
 				</div>
 				<div ng-if="news_type=='special'" class="each-post">
 					<div class="title">{{news.title_special}}</div>
-					<div class="date">{{news.date_special}}</div>
+					<div class="date">{{news.date}}</div>
 					<div class="description">{{news.description_special}}</div>
 				</div>
 			</a>
