--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -15,7 +15,7 @@
 .tk-modal {
     width: 600px;
     height: 550px;
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -28,7 +28,7 @@
 }
 .modal-_header {
     border-radius: 5px 5px 0 0;
-    background: url(http://i.telegraph.co.uk/multimedia/archive/02357/eso-summary_2357457k.jpg) center center;
+    background: url(/images/space.jpg) top center;
     width: 100%;
     height: 50px;
 }
@@ -44,10 +44,6 @@
     text-align: center;
     padding: 20px;
 }
-.near p {
-    transition: all .6s;
-    -webkit-transition: all .6s;
-}
 .near .mode {
     font-weight: bold;
     color: white;
@@ -55,7 +51,10 @@
     text-shadow: 0 1px 2px rgba(0,0,0,.5);
     margin-top: 100px;
     position: relative;
-    top: 0px;
+    top: 10px;
+    transition: all .4s;
+    -moz-transition: all .4s;
+    -webkit-transition: all .4s;
 }
 .near .desc {
     font-size: 16px;
@@ -65,8 +64,11 @@
     color: #333;
     font-weight: 700;
     color: #fff;
-    top: 50px;
+    top: 0px;
     text-shadow: 0 1px 2px rgba(0,0,0,.5);
+    transition: all .6s;
+    -moz-transition: all .6s;
+    -webkit-transition: all .6s;
 }
 .near:hover > div .mode {
     top: -40px;
