--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,9 +13,9 @@
 		</a>
 		</div>
 		<div class="top-squares news_type" ng-click="toggle_news_type()">		
-			<p class="regime">MODE</p>
-			<p class="type-name" ng-if="news_type=='normal'">НОРМАЛ</p>
-			<p class="type-name" ng-if="news_type=='special'">СПЕШЛ</p>
+			<p class="usn regime">MODE</p>
+			<p class="usn type-name" ng-if="news_type=='normal'">НОРМАЛ</p>
+			<p class="usn type-name" ng-if="news_type=='special'">СПЕШЛ</p>
 		</div>
 	</span>
 </nav>
