добавлено что клик по лого обновляет даже корень

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -18,7 +18,7 @@
 		<header ng-if="news_type=='special'" class="title">{{ post.title_special }}</header>
 		<div class="social_share_buttons">
 		    <span class="social_share fa fa-vk" data-type="vk"></span>
-		    <span class="social_share fa fa-facebook" data-type="fb"></span>
+		    <!-- <span class="social_share fa fa-facebook" data-type="fb"></span> -->
 		    <span class="social_share fa fa-twitter" data-type="tw"></span>
 		</div>
 		<div class="date">Редактор произвел новость {{ post.date }}</div>		
