--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,7 @@
 	<spans style="display:inline-block">
 		<div class="top-squares">
 			
-		<a href="/">
+		<a ng-click="goToRoot()">
 			<div class="animated flipInX image">
 				<div class="animated bounceInDown tk_star"></div>
 				<div class="animated bounceInDown tk_text"></div>
