--- a/views/content.ejs
+++ b/views/content.ejs
@@ -21,7 +21,11 @@
 		    <!-- <span class="social_share fa fa-facebook" data-type="fb"></span> -->
 		    <span class="social_share fa fa-twitter" data-type="tw"></span>
 		</div>
-		<div class="date">Редактор произвел новость {{ post.date }}</div>		
+		<div class="date">Редактор произвел новость {{ post.date }}</div>	
+
+		<div class="description" ng-if="news_type=='normal'" ng-bind="post.description"></div>
+		<div class="description" ng-if="news_type=='special'" ng-bind="post.description_special"></div>	
+
 		<div class="content" ng-if="news_type=='normal'" ng-bind-html="post.content"></div>
 		<div class="content" ng-if="news_type=='special'" ng-bind-html="post.content_special"></div>
 	</article>
