--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -34,7 +34,7 @@
 	color: white;
 	padding: 0;
 	margin: 0;
-	font-family: 'Roboto Condensed'
+	font-family: 'RobCond';
 }
 .news_type p.regime {
 	font-size: 12px;
