--- a/views/base.ejs
+++ b/views/base.ejs
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8"> 
 	<script src="/libs/angular/angular.min.js"></script>
 	<script src="/libs/jquery/dist/jquery.min.js"></script>
-	<!-- // <script src="/libs/tinymce/tinymce.min.js"></script> -->
 	<script src="/libs/angular-local-storage/angular-local-storage.min.js"></script>
 	<script>console.a=console.log=console.warn;styles=['background-color:#8539FF','color:white','font-weight:bold','text-shadow:0 1px 1px rgba(0,0,0,.5)','height:50px','font-size:20px','line-height:50px','display:block','padding:10px 40px','text-align:center','width:100%'].join(';');console.warn=console.log=function(){console.a('%c МАГИЯ ТВОЕГО КОСМОСА', styles);}</script>
 	<script>
@@ -14,8 +13,8 @@
 	<%- scripts%>
 	<script src="/libs/angular-ui-tinymce/src/tinymce.js"></script>
 
+	<link rel="stylesheet" href="/stylesheets/fonts.css">
 	<link rel="stylesheet" href="/libs/bootstrap/dist/css/bootstrap.min.css"></link>
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="image/png" href="/images/tk.png" sizes="32x32">
 	<%- stylesheets %>
 
