--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -1,6 +1,6 @@
 .page * {
 	color: #555;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'RobCondLight', sans-serif;
 }
 div.page {
 	margin-top: 40px;
@@ -31,7 +31,7 @@ div.page .misc {
 	text-decoration: none;
 }
 .post .title {
-	font-weight: 700;
+	font-family: 'RobCondBold';
 	font-size: 30px;
 	line-height: 35px;
 }
@@ -43,18 +43,18 @@ div.page .misc {
 }
 .post .description {
 	margin-top: 10px;
-	font: italic 16px/24px 'Roboto Condensed', sans-serif;
+	font: italic 16px/24px 'RobCondLight', sans-serif;
 }
 .post .content {
-	font: 16px/24px 'Roboto Condensed', sans-serif;
+	font: 16px/24px 'RobCondLight', sans-serif;
 	margin-top: 10px;
 }
 .tag-title {
-	font-weight: 700;
+	font-family: 'RobCondBold';
 	font-size: 25px;
 	padding: 0px 10px;
-	color: #4D42FF;
 	margin-top: 10px;
+	color: #4D42FF;
 }
 .each-post {
 	border-radius: 2px;
@@ -69,18 +69,16 @@ div.page .misc {
 .each-post .title {
 	font-size: 20px;
 	line-height: 24px;
-	font-weight: 700;
+	font-family: 'RobCondBold';
 }
 .each-post .date {
 	font-size: 12px;
-	font-weight: 400;
 	color: #E85C49;
 }
 .each-post .description {
 	font: 14px;
 	line-height: 18px;
 	padding-top: 5px;
-	font-weight: 400;
 }
 a {
 	color: #4D42FF !important;
