--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -29,12 +29,11 @@
 	box-shadow: 0 2px 4px rgba(0,0,0,.5);
 }
 .news_type p {
-	font-weight: 700;
 	float: left;
 	color: white;
 	padding: 0;
 	margin: 0;
-	font-family: 'RobCond';
+	font-family: 'RobCondBold';
 }
 .news_type p.regime {
 	font-size: 12px;
