добавлена аналитика гугла и варп в топ

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,8 +1,9 @@
 <% stylesheet('/stylesheets/header.css') -%>
 <% stylesheet("/libs/animate.css/animate.min.css") -%>
 <% script('/javascripts/header.js') -%>
+<% script('/javascripts/misc.js') -%>
 <nav class="top" ng-controller="HeaderCtrl">
-	<spans style="display:inline-block">
+	<span>
 		<div class="top-squares">
 			
 		<a ng-click="goToRoot()">
