--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,14 +1,20 @@
 .top {
-	height: 60px;
+	/*height: 60px;*/
+	height: 150px;
+	line-height: 150px;
 	width: 100%;
-	margin: 25px 0;
+	/*margin: 25px 0;*/
 	text-align: center;
+}
+.top span {
+	line-height: 60px;
+	vertical-align: middle;
+	display: inline-block;
 }
 .top a {
 	width: 60px;
 	height: 60px;
 	display: inline-block;
-	
 }
 .usn {
 	-webkit-user-select: none;
@@ -18,6 +24,7 @@
 }
 .top-squares {
 	float: left;
+	height: 60px;
 }
 .top-squares:first-child {
 	margin-right: 10px;
@@ -81,7 +88,6 @@
 	line-height: 110px;
 	text-align: center;
 	position: relative;
-	/*font-family: "Philosopher";*/
 	font-family: 'Comfortaa';
 	font-weight: 700;
 	margin: 20px auto;
